ServerFacade(createGame) == fin